--- a/index.html
+++ b/index.html
@@ -2,213 +2,343 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Chat App</title>
-  <script src="https://cdn.jsdelivr.net/npm/ably@1.2.39/browser/static/ably.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simple Chat</title>
   <style>
     body {
-      margin:0;
-      font-family: Arial, sans-serif;
-      height:100vh;
-      display:flex;
-      flex-direction:column;
-      background:#f0f0f0;
+      font-family: "Segoe UI", Roboto, Tahoma, sans-serif;
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: #f5f5f5; /* Android-like neutral */
+      color: black;
     }
-    #loginScreen {
-      margin:auto;
-      text-align:center;
+
+    .chat-container {
+      width: 95%;
+      max-width: 1100px;
+      height: 90vh;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
     }
-    #chatContainer {
-      display:flex;
-      flex-direction:column;
-      height:100vh;
-    }
+
     #chat {
-      flex:1;
-      overflow-y:auto;
-      padding:20px;
-      display:flex;
-      flex-direction:column;
-      gap:12px;
-      background:url('https://cdn.vectorstock.com/i/1000v/86/67/hi-icon-greet-and-hello-symbol-flat-vector-6608667.jpg') no-repeat center center;
-      background-size:cover;
+      flex: 1;
+      overflow-y: auto;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
     }
+
+    .sidebar {
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+      gap: 10px;
+      border-top: 1px solid #ddd;
+      background: #fafafa;
+    }
+
+    /* Android-like chat bubbles */
     .message {
-      max-width:60%;
-      padding:10px 14px;
-      border-radius:18px;
-      position:relative;
-      display:inline-block;
-      word-wrap:break-word;
+      max-width: 70%;
+      padding: 10px 14px;
+      border-radius: 18px;
+      line-height: 1.4;
+      word-wrap: break-word;
+      position: relative;
+      font-size: 0.95em;
     }
-    .own {
-      align-self:flex-end;
-      background:#0b93f6;
-      color:white;
+
+    .message.left {
+      align-self: flex-start;
+      background: #e9ecef;
+      border-bottom-left-radius: 4px;
     }
-    .other {
-      align-self:flex-start;
-      background:#e5e5ea;
-      color:black;
+
+    .message.right {
+      align-self: flex-end;
+      background: #cdeccd;
+      border-bottom-right-radius: 4px;
     }
-    .username {
-      font-size:0.8em;
-      font-weight:bold;
-      margin-bottom:4px;
+
+    .message img {
+      max-width: 260px;
+      border-radius: 8px;
+      margin-top: 6px;
+      display: block;
     }
-    .menu {
-      position:absolute;
-      top:4px;
-      right:8px;
-      cursor:pointer;
-      font-weight:bold;
+
+    .timestamp {
+      font-size: 0.75em;
+      color: #666;
+      margin-top: 2px;
+      text-align: right;
     }
-    .inputArea {
-      display:flex;
-      padding:10px;
-      background:white;
+
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      outline: none;
     }
-    .inputArea input {
-      flex:1;
-      padding:10px;
-      border:1px solid #ccc;
-      border-radius:20px;
-      outline:none;
+
+    textarea { resize: none; height: 80px; }
+
+    button {
+      padding: 10px 18px;
+      background: #5cb85c;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
     }
-    .inputArea button {
-      margin-left:8px;
-      padding:10px 16px;
-      border:none;
-      border-radius:20px;
-      background:#0b93f6;
-      color:white;
-      cursor:pointer;
+
+    button:disabled { opacity: 0.5; cursor: not-allowed; }
+
+    .overlay {
+      position: fixed; inset: 0;
+      display: flex; justify-content: center; align-items: center;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 100;
+    }
+
+    .pin-box {
+      background: #fff; padding: 30px; border-radius: 12px; text-align: center; width: 90%; max-width: 300px;
+    }
+
+    .pin-box input {
+      width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #ccc; text-align: center; margin-bottom: 15px; font-size: 1em;
+    }
+
+    .pin-box button {
+      padding: 10px 18px; border-radius: 8px; border: none; background: #5cb85c; color: #fff; cursor: pointer;
+    }
+
+    /* 3-dot menu */
+    .options {
+      position: absolute;
+      top: 5px;
+      right: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      color: #555;
+    }
+
+    .options-menu {
+      position: absolute;
+      top: 20px;
+      right: 8px;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      display: none;
+      z-index: 10;
+    }
+
+    .options-menu button {
+      background: none;
+      color: #000;
+      border: none;
+      padding: 6px 12px;
+      text-align: left;
+      width: 100%;
+      cursor: pointer;
+    }
+
+    .options-menu button:hover {
+      background: #f0f0f0;
     }
   </style>
 </head>
 <body>
-  <div id="loginScreen">
+
+<!-- PIN overlay -->
+<div class="overlay" id="pinOverlay">
+  <div class="pin-box">
     <h2>Enter PIN</h2>
-    <input id="pinInput" type="password" placeholder="PIN"><br><br>
-    <input id="nameInput" type="text" placeholder="Your display name"><br><br>
-    <button id="loginBtn">Enter</button>
+    <input type="password" id="pinInput" placeholder="Enter PIN">
+    <button id="pinBtn">Continue</button>
   </div>
+</div>
 
-  <div id="chatContainer" style="display:none;">
-    <div id="chat"></div>
-    <div class="inputArea">
-      <input id="messageInput" type="text" placeholder="Type a message or image URL...">
-      <button id="sendBtn">Send</button>
-    </div>
+<div class="chat-container" id="chatApp" style="display: none;">
+  <div id="chat"></div>
+  <div class="sidebar">
+    <input type="text" id="username" placeholder="Enter username..." />
+    <textarea id="message" placeholder="Type message or paste image URL..." disabled></textarea>
+    <button id="send" disabled>Send</button>
+    <button id="deleteLocalData">Delete Local Data</button>
   </div>
+</div>
 
-  <script>
-    const PIN = "5432";
-    const API_KEY = "Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4";
-    const chatDiv = document.getElementById('chat');
-    const loginScreen = document.getElementById('loginScreen');
-    const chatContainer = document.getElementById('chatContainer');
-    let username = localStorage.getItem('chat-username');
-    let pinSaved = localStorage.getItem('chat-pin-ok');
-    let ably, channel;
+<audio id="newMessageSound" src="https://www.soundjay.com/button/sounds/button-3.mp3" preload="auto"></audio>
 
-    // If already logged in
-    if(username && pinSaved){
-      startChat(username);
+<script src="https://cdn.ably.com/lib/ably.min-1.js"></script>
+<script>
+  const COMMON_PIN = '5432';
+  const ably = new Ably.Realtime('Vtd4-A.9jmIFA:umDML_i9STQP4BIH_u2Jon5BlkxuiK36w37FVrkhEl4');
+  const channel = ably.channels.get('chat');
+
+  const pinOverlay = document.getElementById('pinOverlay');
+  const pinInput = document.getElementById('pinInput');
+  const pinBtn = document.getElementById('pinBtn');
+  const chatApp = document.getElementById('chatApp');
+  const usernameInput = document.getElementById('username');
+  const messageInput = document.getElementById('message');
+  const sendBtn = document.getElementById('send');
+  const deleteLocalDataBtn = document.getElementById('deleteLocalData');
+  const chatDiv = document.getElementById('chat');
+  const newMessageSound = document.getElementById('newMessageSound');
+
+  // PIN logic
+  if (localStorage.getItem('chatPin') === COMMON_PIN) {
+    pinOverlay.style.display = 'none';
+    chatApp.style.display = 'flex';
+    if (localStorage.getItem('username')) {
+      usernameInput.value = localStorage.getItem('username');
+      messageInput.disabled = false;
+      sendBtn.disabled = false;
+    }
+  }
+
+  pinBtn.addEventListener('click', () => {
+    if (pinInput.value.trim() === COMMON_PIN) {
+      localStorage.setItem('chatPin', COMMON_PIN);
+      pinOverlay.style.display = 'none';
+      chatApp.style.display = 'flex';
+      if (localStorage.getItem('username')) {
+        usernameInput.value = localStorage.getItem('username');
+        messageInput.disabled = false;
+        sendBtn.disabled = false;
+      }
+    } else {
+      alert('Wrong PIN');
+    }
+  });
+
+  usernameInput.addEventListener('change', () => {
+    const name = usernameInput.value.trim();
+    if (!name) return;
+    localStorage.setItem('username', name);
+    messageInput.disabled = false;
+    sendBtn.disabled = false;
+  });
+
+  // Render message
+  function displayMessage({ username, message, timestamp, messageId, deleted }) {
+    const existing = document.querySelector(`[data-id="${messageId}"]`);
+    if (deleted) {
+      if (existing) existing.innerHTML = "<em>Message deleted</em>";
+      return;
+    }
+    if (existing) return; // prevent duplicates
+
+    const currentUser = localStorage.getItem('username');
+    const msgEl = document.createElement('div');
+    msgEl.className = 'message ' + (username === currentUser ? 'right' : 'left');
+    msgEl.dataset.id = messageId;
+
+    let content = message;
+    if (message.match(/^https?:\/\/.*\.(jpg|jpeg|png|gif|webp)$/i)) {
+      content = `<img src="${message}" alt="image">`;
+    } else if (message.match(/^https?:\/\//i)) {
+      content = `<a href="${message}" target="_blank">${message}</a>`;
     }
 
-    document.getElementById('loginBtn').onclick = ()=>{
-      const pin = document.getElementById('pinInput').value;
-      const name = document.getElementById('nameInput').value.trim() || "Anonymous";
-      if(pin===PIN){
-        localStorage.setItem('chat-pin-ok','yes');
-        localStorage.setItem('chat-username', name);
-        startChat(name);
-      } else {
-        alert("Wrong PIN!");
+    msgEl.innerHTML = `<div><strong>${username}</strong><br>${content}</div>
+                       <div class="timestamp">${new Date(timestamp).toLocaleTimeString()}</div>`;
+
+    // If it's my message → add 3-dot menu
+    if (username === currentUser) {
+      const options = document.createElement('div');
+      options.className = 'options';
+      options.textContent = "⋮";
+
+      const menu = document.createElement('div');
+      menu.className = 'options-menu';
+      const delBtn = document.createElement('button');
+      delBtn.textContent = "Delete";
+      delBtn.onclick = () => {
+        deleteMessage(messageId);
+        menu.style.display = "none";
+      };
+      menu.appendChild(delBtn);
+
+      options.onclick = () => {
+        menu.style.display = (menu.style.display === "block") ? "none" : "block";
+      };
+
+      msgEl.appendChild(options);
+      msgEl.appendChild(menu);
+    }
+
+    chatDiv.appendChild(msgEl);
+    chatDiv.scrollTop = chatDiv.scrollHeight;
+  }
+
+  // Load ALL history, paginated
+  function loadAllHistory(channel, callback) {
+    let params = { direction: 'forwards', limit: 100 };
+    function getPage(page) {
+      page.items.forEach(item => callback(JSON.parse(item.data)));
+      if (page.hasNext()) {
+        page.next().then(getPage);
       }
     }
+    channel.history(params).then(getPage);
+  }
 
-    function startChat(name){
-      username = name;
-      loginScreen.style.display='none';
-      chatContainer.style.display='flex';
-      ably = new Ably.Realtime(API_KEY);
-      channel = ably.channels.get("global-chat");
+  // Subscribe to live updates
+  channel.subscribe('message', msg => {
+    displayMessage(JSON.parse(msg.data));
+    newMessageSound.play();
+  });
 
-      // Load all history recursively
-      loadAllHistory(channel, (msg)=>{
-        const data = JSON.parse(msg.data);
-        renderMessage(msg.id, data.username, data.message, data.timestamp);
-      });
+  // Initial load
+  loadAllHistory(channel, displayMessage);
 
-      // Subscribe to new messages
-      channel.subscribe('message', msg=>{
-        const data = JSON.parse(msg.data);
-        renderMessage(msg.id, data.username, data.message, data.timestamp);
-      });
+  // Send
+  function sendMessage() {
+    const name = usernameInput.value.trim();
+    const msg = messageInput.value.trim();
+    if (!name || !msg) return;
+    const data = { username: name, message: msg, timestamp: Date.now(), messageId: Date.now() + "-" + Math.random() };
+    channel.publish('message', JSON.stringify(data));
+    messageInput.value = '';
+  }
 
-      document.getElementById('sendBtn').onclick = sendMessage;
-      document.getElementById('messageInput').addEventListener('keydown', e=>{
-        if(e.key==='Enter') sendMessage();
-      });
+  // Delete
+  function deleteMessage(messageId) {
+    const data = { messageId, deleted: true };
+    channel.publish('message', JSON.stringify(data));
+  }
+
+  sendBtn.addEventListener('click', sendMessage);
+  messageInput.addEventListener('keypress', e => {
+    if (e.key === 'Enter' && !e.shiftKey) {
+      e.preventDefault();
+      sendMessage();
     }
+  });
 
-    function loadAllHistory(channel, callback){
-      let params = {direction:'forwards', limit:100};
-      function page(historyPage){
-        historyPage.items.forEach(callback);
-        if(historyPage.hasNext()){
-          historyPage.next().then(page);
-        }
-      }
-      channel.history(params).then(page);
-    }
-
-    function sendMessage(){
-      const input = document.getElementById('messageInput');
-      const text = input.value.trim();
-      if(!text) return;
-      const data = {username:username, message:text, timestamp:Date.now()};
-      channel.publish('message', JSON.stringify(data));
-      input.value='';
-    }
-
-    function renderMessage(id, user, message, timestamp){
-      if(document.getElementById(id)) return; // don’t duplicate
-      const div = document.createElement('div');
-      div.className='message '+(user===username?'own':'other');
-      div.id=id;
-      div.innerHTML = `
-        <div class="username">${user}</div>
-        ${message.match(/\.(jpeg|jpg|gif|png|webp)$/i) 
-          ? `<img src="${message}" style="max-width:200px;border-radius:10px;">`
-          : `<div>${message}</div>`}
-        ${(user===username)?'<div class="menu">⋮</div>':''}
-      `;
-      chatDiv.appendChild(div);
-      chatDiv.scrollTop=chatDiv.scrollHeight;
-
-      // Menu delete
-      if(user===username){
-        div.querySelector('.menu').onclick=()=>{
-          if(confirm("Delete this message?")){
-            channel.publish('delete',{id});
-            div.remove();
-          }
-        }
-      }
-    }
-
-    // Listen for deletes
-    setTimeout(()=>{
-      if(channel){
-        channel.subscribe('delete', msg=>{
-          const {id} = msg.data;
-          const m = document.getElementById(id);
-          if(m) m.remove();
-        });
-      }
-    },2000);
-  </script>
+  // Delete local data (logout)
+  deleteLocalDataBtn.addEventListener('click', () => {
+    localStorage.removeItem('chatPin');
+    localStorage.removeItem('username');
+    alert('Local data deleted. Refresh page to log in again.');
+    pinOverlay.style.display = 'flex';
+    chatApp.style.display = 'none';
+  });
+</script>
 </body>
 </html>
